fix(*): Makefile.am中のCFLAGSを修正
Makefile.amにCFLAGSとして、リンクオプションが記載されていたが、
記述誤りのため、適用されていなかったものを修正した。
合わせて標準としてデバッグオプションを有効にしようとしていた部分は削除した。

--- a/dblib/Makefile.am
+++ b/dblib/Makefile.am
@@ -1,4 +1,4 @@
 lib_LTLIBRARIES=libocesql.la
 libocesql_la_SOURCES=ocesql.c ocdb.c ocpgsql.c ocdbutil.c ocdblog.c
 
-CFLAGS = -g -lpq
+AM_CFLAGS = -lpq
