fix(*): ライブラリのみのインストール機能実装を変更
#15 にてライブラリのみを実装するための機能を実装したが、Makefile.inは
自動生成により上書きされる可能性があるため、今後の保守性を考慮し、
configure.acおよびMakefile.amを利用した実装に変更した。

--- a/Makefile.in
+++ b/Makefile.in
@@ -149,7 +149,7 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 CSCOPE = cscope
-DIST_SUBDIRS = $(SUBDIRS)
+DIST_SUBDIRS = dblib ocesql
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -317,7 +317,9 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = dblib ocesql
+@DISABLE_OCESQL_FALSE@OCESQL = ocesql
+@DISABLE_OCESQL_TRUE@OCESQL = 
+SUBDIRS = dblib $(OCESQL)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
